--- a/src/components/Table/StudyTable.module.css
+++ b/src/components/Table/StudyTable.module.css
@@ -4,6 +4,7 @@
   overflow-x: auto;
   border-radius: 8px;
   background-color: #fff;
+  /* border: 2px solid red; */
   box-shadow: 0 1px 4px rgba(0, 0, 0, 0.1);
 }
 
