--- a/src/index.css
+++ b/src/index.css
@@ -41,11 +41,11 @@ button {
   align-items: center;
   padding: 0.8rem 1rem;
   gap: 0.5rem;
-  color: #ffffff;
+  color: #000000;
   font-weight: 700;
   border-radius: 4px;
   border: none;
-  background: rgb(46, 133, 255);
+  background: #ffffff;
 }
 
 button:hover {
@@ -56,6 +56,19 @@ button:hover {
 .global-border {
   border: 1px solid #e3e3e3;
   border-radius: 8px;
+}
+
+.activeButton,
+.activeButton:hover {
+  background-color: black;
+  color: #ffffff;
+}
+
+.activeToggle,
+.activeToggle:hover,
+.filterButton:hover {
+  background: #ffffff;
+  border-radius: 0px;
 }
 
 .badge {
@@ -96,4 +109,3 @@ button:hover {
 .buttonIcon:hover {
   background-color: #ffffff8c;
 }
-
