Added authentication, registration, and login

--- a/src/components/common/Navbar/Navbar.module.css
+++ b/src/components/common/Navbar/Navbar.module.css
@@ -5,6 +5,12 @@
   background: #fff;
 }
 
+.navLeft {
+  display: flex;
+  align-items: center;
+  /* border: 2px solid red; */
+}
+
 .navContent {
   max-width: 1200px;
   margin: 0 auto;
