Added base sidebar

--- a/src/index.css
+++ b/src/index.css
@@ -12,6 +12,9 @@
 
   /* Shadows */
   --box-shadow-1: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
+
+  /* Colors */
+  --dark-blue-primary: #11112b;
 }
 
 *,
