Changed directory structure - created app folder, created app.jsx; router.jsx; provider.jsx and modularized the code

--- a/src/index.css
+++ b/src/index.css
@@ -11,7 +11,7 @@
   --primary-font: "Space Grotesk";
 
   /* Colors */
-
+  --dark-primary: #11112b;
   --white-primary: #ffffff;
   --neon-gradient: linear-gradient(
     360deg,
