--- a/src/components/Layout/Layout.module.css
+++ b/src/components/Layout/Layout.module.css
@@ -1,3 +1,86 @@
-.wrapper {
-  border: 2px solid red;
+/* body {
+  overflow: hidden;
+} */
+
+.layoutContainer {
+  /* border: 4px solid red; */
+  position: fixed;
+  top: 0;
+  bottom: 0;
+  display: flex;
+  height: 100vh;
+  width: 100%;
+  background-color: var(--dark-primary);
+  overflow: hidden;
+}
+
+/* Toggle Button */
+.sidebarToggle {
+  position: fixed;
+  top: 48px;
+  left: 140px;
+  z-index: 9999;
+  border-radius: 8px;
+  background-color: var(--dark-primary);
+  /* color: #ffffff; */
+  border: 1px solid #efefef;
+  /* padding: 1rem; */
+  height: 36px;
+  width: 36px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  cursor: pointer;
+  padding: 0rem;
+}
+
+.buttonToggled {
+  left: 40px;
+}
+
+.sidebarToggle:hover {
+  background: rgb(1, 1, 56);
+}
+
+.toggleIcon {
+  font-size: 1.25rem;
+  color: #ffffff;
+}
+
+.mainContent {
+  /* border: 2px solid green; */
+  flex-grow: 1;
+  margin-left: 160px;
+  margin-top: 2rem;
+  background-color: #e4e4e4;
+  border-radius: 16px 0px 0px 0px;
+  display: flex;
+  flex-direction: column;
+  height: 100vh;
+  overflow: hidden;
+}
+
+.toggled {
+  margin-left: 60px;
+}
+
+.header {
+  background: #e4e4e4;
+  border-radius: 16px 0px 0px 0px;
+  position: sticky;
+  top: 0;
+  left: 0;
+  z-index: 900;
+  /* border: 2px solid green; */
+  width: 100%;
+  margin-left: 1rem;
+}
+.header h1 {
+  /* margin-left: 1rem; */
+}
+
+.contentArea {
+  flex-grow: 1;
+  overflow-y: auto;
+  padding: 20px;
 }
