--- a/src/components/common/Navbar/Navbar.module.css
+++ b/src/components/common/Navbar/Navbar.module.css
@@ -3,6 +3,9 @@
   border-bottom: 2px solid #eaeaea;
   padding: 1rem 0;
   background: #fff;
+  position: fixed;
+  width: 100%;
+  z-index: 999;
 }
 
 .navLeft {
@@ -79,12 +82,16 @@
 }
 
 .signInButton {
-  background: none;
+  padding: 0.75rem 2rem;
+  background-color: #3b82f6;
+  color: white;
+  border-radius: 0.5rem;
   border: none;
-  color: #333;
-  font-weight: 700;
-  /* font-size: 1rem; */
   cursor: pointer;
+}
+.signInButton:hover {
+  background-color: #e3e3e3;
+  color: #000000;
 }
 
 @media (max-width: 768px) {
