--- a/src/components/common/Navbar/Navbar.module.css
+++ b/src/components/common/Navbar/Navbar.module.css
@@ -6,6 +6,7 @@
   position: fixed;
   width: 100%;
   z-index: 999;
+  top: 0;
 }
 
 .navLeft {
@@ -88,6 +89,7 @@
   border-radius: 0.5rem;
   border: none;
   cursor: pointer;
+  margin-right: 1rem;
 }
 .signInButton:hover {
   background-color: #e3e3e3;
