--- a/src/index.css
+++ b/src/index.css
@@ -80,6 +80,10 @@ button:hover {
   background: rgb(36, 106, 204);
 }
 
+a {
+  text-decoration: none;
+}
+
 .global-border {
   border: 1px solid #e3e3e3;
   border-radius: 8px;
