--- a/src/components/Tabs/TabsContent.module.css
+++ b/src/components/Tabs/TabsContent.module.css
@@ -1,19 +1,73 @@
-.wrapper {
-  /* background-color: red; */
-}
-
+/* General styles */
 .dataWrapper {
-  /* background-color: red; */
-  margin: 2rem 0rem;
+  margin: 2rem 0;
 }
 
+/* Button container */
+.buttonContainer {
+  display: flex;
+  gap: 10px;
+  margin-bottom: 32px;
+}
+
+/* Button styles */
+.button {
+  font-family: sans-serif;
+  background: none;
+  color: #333;
+  background: #fff;
+  border: 0.5px solid rgb(184, 184, 184);
+  transition:
+    background-color 0.3s ease,
+    color 0.3s ease,
+    border-color 0.3s ease;
+}
+
+.button:focus {
+  background-color: black;
+  color: #ffffff;
+  border-color: black;
+}
+
+.activeButton {
+  background-color: #000;
+  color: white;
+  font-family: sans-serif;
+}
+
+/* Chart container */
+.chartContainer {
+  margin-bottom: 2rem;
+  padding: 1rem;
+  border: 1px solid #ddd;
+  border-radius: 8px;
+  background-color: #fff;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+}
+
+/* Question header */
 .questionHeader {
-  display: inline-block; /* Prevent full width stretch */
+  font-family: sans-serif;
+  display: inline-block;
   width: 100%;
-  word-wrap: break-word; /* Wrap long words onto next line */
-  white-space: normal; /* Allow text to wrap */
-  text-align: left; /* Center the text */
-  font-size: 24px;
+  word-wrap: break-word;
+  white-space: normal;
+  text-align: left;
+  font-size: 20px;
   font-weight: bold;
-  /* margin: 0 auto; */
+  margin-bottom: 2rem;
+}
+
+/* Responsive container */
+.responsiveContainer {
+  width: 100%;
+  height: 400px;
+}
+
+/* XAxis tick styles */
+.recharts-x-axis .recharts-cartesian-axis-tick {
+  font-size: 12px;
+  font-family: sans-serif;
+  text-transform: capitalize;
+  white-space: pre-wrap; /* Allow line breaks */
 }
