--- a/src/components/Heatmap/Heatmap.module.css
+++ b/src/components/Heatmap/Heatmap.module.css
@@ -13,7 +13,32 @@
   margin: 2rem 0rem;
   border-radius: 8px;
   box-shadow: var(--box-shadow-1);
+  display: grid;
+  grid-template-columns: auto 1fr;
+  align-items: center;
+  gap: 10px;
+  width: 100%;
+  overflow: hidden;
+}
 
+.labelsContainer {
   display: flex;
   flex-direction: column;
+  min-width: 250px;
+  max-width: 250px;
+  word-wrap: break-word;
+}
+
+.labelItem {
+  margin-bottom: 30px;
+  font-size: 12px;
+  white-space: normal;
+  text-align: left;
+  padding: 10px 0;
+  line-height: 1.5;
+}
+
+.chartContainer {
+  flex: 1;
+  min-width: 0;
 }
