--- a/src/index.css
+++ b/src/index.css
@@ -80,6 +80,24 @@ button:hover {
   background: rgb(36, 106, 204);
 }
 
+.btn-primary {
+  font-size: clamp(0.875rem, 1vw + 0.5rem, 1.25rem);
+  padding: 0.75rem 2rem;
+  background-color: #3b82f6;
+  color: white;
+  border-radius: 0.5rem;
+  border: none;
+  cursor: pointer;
+}
+
+.btn-primary:hover {
+  background: white;
+  color: black;
+  transition: 0.3s;
+  box-shadow: var(--box-shadow-1);
+  cursor: pointer;
+}
+
 a {
   text-decoration: none;
 }
