--- a/src/components/Tabs/TabsContent.module.css
+++ b/src/components/Tabs/TabsContent.module.css
@@ -1,10 +1,12 @@
 .wrapper {
   /* background-color: red; */
+  /* border: 2px solid red; */
 }
 
 .dataWrapper {
   /* background-color: red; */
   margin: 2rem 0rem;
+  /* border: 2px solid green; */
 }
 
 .questionHeader {
