--- a/src/components/Tabs/TabsContent.module.css
+++ b/src/components/Tabs/TabsContent.module.css
@@ -39,10 +39,10 @@
 .chartContainer {
   margin-bottom: 2rem;
   padding: 1rem;
-  border: 1px solid #ddd;
-  border-radius: 8px;
-  background-color: #fff;
-  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+  /* border: 1px solid #ddd; */
+  /* border-radius: 8px; */
+  /* background-color: #fff; */
+  /* box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1); */
 }
 
 /* Question header */
@@ -55,7 +55,7 @@
   text-align: left;
   font-size: 20px;
   font-weight: bold;
-  margin-bottom: 2rem;
+  /* margin-bottom: 2rem; */
 }
 
 /* Responsive container */
