--- a/src/components/Tabs/StudyFilters.module.css
+++ b/src/components/Tabs/StudyFilters.module.css
@@ -37,10 +37,10 @@
   color: #000000;
 }
 
-.activeButton {
+.activeButton,
+.activeButton:hover {
   background-color: black;
   color: white;
-  border: 1px solid black;
 }
 
 /* Filter Buttons */
@@ -70,13 +70,14 @@
 
 .filterButton:hover {
   background-color: #f5f5f5;
+  /* border: 2px solid red; */
 }
 
 /* Active State */
-.activeToggle {
+.activeToggle,
+.activeToggle:hover {
   background: #000;
   color: #fff;
-  border: 1px solid black;
 }
 
 /* Responsive Design */
