made highlited columns green from blue

--- a/src/components/PlaygroundTable/StudyTable.module.css
+++ b/src/components/PlaygroundTable/StudyTable.module.css
@@ -172,7 +172,7 @@
   right: 2px;
   bottom: 2px;
   left: 2px;
-  border: 1px solid #1890ff;
+  border: 4px solid #14e337;
   border-radius: 2px;
   pointer-events: none;
 }
