--- a/src/components/Heatmap/Heatmap.module.css
+++ b/src/components/Heatmap/Heatmap.module.css
@@ -24,18 +24,19 @@
 .labelsContainer {
   display: flex;
   flex-direction: column;
+  gap: 2em;
   min-width: 250px;
   max-width: 250px;
   word-wrap: break-word;
 }
 
 .labelItem {
-  margin-bottom: 30px;
-  font-size: 12px;
+  margin-bottom: 0;
+  font-size: 18px;
   white-space: normal;
   text-align: left;
-  padding: 10px 0;
-  line-height: 1.5;
+  padding: 0 0;
+  line-height: 1;
 }
 
 .chartContainer {
@@ -60,7 +61,7 @@
 
 .labelItem {
   margin-top: 5px;
-  font-weight: bold;
+  font-weight: normal;
   text-align: center;
   max-width: 90%;
   word-wrap: break-word;
