--- a/src/components/Heatmap/Heatmap.module.css
+++ b/src/components/Heatmap/Heatmap.module.css
@@ -25,8 +25,7 @@
   display: flex;
   flex-direction: column;
   gap: 2em;
-  min-width: 250px;
-  max-width: 250px;
+  width: 250px;
   word-wrap: break-word;
 }
 
@@ -63,7 +62,7 @@
 .labelItem {
   margin-top: 5px;
   font-weight: normal;
-  text-align: center;
+  text-align: justify;
   max-width: 90%;
   word-wrap: break-word;
 }
